--- a/style/style.css
+++ b/style/style.css
@@ -59,3 +59,112 @@ nav a {
      background: wheat;
      width: fit-content;
 }
+
+
+/* form design */
+
+
+form {
+     padding: 20px 40px;
+     display: grid;
+     grid-template-columns: repeat(2,1fr);
+     gap: 20px;
+}
+
+form input {
+     padding: 10px 20px;
+     font-size: large;
+     outline: none;
+     border-radius: 6px;
+     border: 1px solid gray;
+     margin-top: 5px;
+     max-width: 260px;
+     width: 100%;
+}
+ form button{
+     background: white;
+     border: 1px solid black;
+     padding: 10px 20px;
+     font-size: large;
+     border-radius: 6px;
+     cursor: pointer;
+ }
+
+.form-flex{
+     display: flex;
+     align-items: center;
+     margin-top: 20px;
+     overflow: hidden;
+     gap: 20px;
+     background: wheat;
+     border-radius: 10px;
+}
+
+.form-flex form{
+     width: 50%;
+}
+
+.form-flex img{
+     width: 50%;
+     object-fit: cover;
+     height: 500px;
+}
+
+table {
+     border-spacing: 0;
+}
+
+table th, td {
+border: 1px solid black;
+padding: 10px 20px;
+}
+
+table th {
+     background: green;
+     color: white
+}
+/* 
+tr:first-child {
+     background: gray;
+} */
+
+.images {
+     display: grid;
+     grid-template-columns: repeat(3,1fr);
+     gap: 20px;
+}
+
+.images img {
+     object-fit: cover;
+}
+
+.products {
+     display: grid;
+     grid-template-columns: repeat(4, 1fr);
+     gap: 20px;
+}
+
+.products img{
+     width: 100%;
+     height: 200px;
+     object-fit: cover;
+}
+
+.card {
+     background: rgb(190, 190, 190);
+     border-radius: 10px;
+     overflow: hidden;
+     cursor: pointer;
+}
+
+.card div {
+     padding: 10px;
+}
+
+.card:hover {
+     background: rgb(198, 136, 136);
+}
+
+/* .products:hover .card{
+     background: green;
+} */
