--- a/style/style.css
+++ b/style/style.css
@@ -20,6 +20,12 @@ nav{
      top: 0px;
      z-index: 999;
 }
+
+nav .big-nav {
+     display: flex;
+     gap: 20px
+}
+
 nav a {
      color: white;
      font-size: larger;
@@ -173,6 +179,10 @@ tr:first-child {
 } */
 
 
+.container {
+     padding: 0 40px;
+}
+
 .grid {
      display: grid;
      grid-template-columns: repeat(3,1fr);
@@ -206,6 +216,7 @@ tr:first-child {
 
 .drop-down {
      position: relative;
+     display: none;
 }
 
 .drop-down:hover .drop-content{
@@ -229,6 +240,10 @@ tr:first-child {
      cursor: pointer;
 }
 
+.drop-content a {
+     color: black;
+}
+
 .fixed {
      position: fixed;
      height: 100px;
@@ -237,3 +252,85 @@ tr:first-child {
      bottom: 50px;
      right: 50px;
 }
+
+.product {
+     display: flex;
+}
+
+.filter {
+     min-width: 200px;
+     position: sticky;
+     height: fit-content;
+     top: 100px;
+}
+
+@media only screen and (max-width: 1500px) {
+     form {
+          display: block;
+     }
+}
+
+
+@media only screen and (max-width: 1000px) {
+     .product {
+          flex-direction: column;
+     }
+     .filter {
+          position: static;
+          height: fit-content;
+     }
+     .products {
+          grid-template-columns: repeat(3, 1fr);
+     }
+}
+
+@media only screen and (max-width: 770px) {
+nav {
+     background: #4e4061;
+}
+.products {
+     grid-template-columns: repeat(2, 1fr);
+}
+.images {
+     grid-template-columns: repeat(2,1fr);
+}
+.form-flex{
+     flex-direction: column-reverse;
+}
+.form-flex form{
+     width: 90%;
+}
+
+.form-flex img{
+     width: 90%;
+}
+.fixed
+{
+     display: none;
+}
+.container {
+     padding: 0 10px
+}
+form input {
+     width: 200px;
+} 
+     
+}
+
+@media only screen and (max-width: 500px) {
+     .products {
+          grid-template-columns: repeat(1, 1fr);
+     }
+     .images {
+          grid-template-columns: repeat(1, 1fr);
+     }
+     .grid {
+          display: none;
+     }
+     .drop-down {
+          display: block;
+     }
+     nav .big-nav {
+          display: none;
+     }
+     }
